bug(select): fix select placeholder text-overflow

--- a/src/components/select/styles.scss
+++ b/src/components/select/styles.scss
@@ -45,6 +45,9 @@
     padding: 12px;
     border: 1px solid #8897a8;
     flex-grow: 1;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 
     @include font-size(14);
 
@@ -62,7 +65,7 @@
 
   .select-arrow {
     display: block;
-    width: 48px;
+    min-width: 48px;
     height: 48px;
     background-color: $primary1;
     background-image: url('./arrow.svg');
